UCP playerstats system added
Added a page next to profile, which broadcasts your ingame stats. Work in progress

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Login</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/loginbg.css">
+		<link rel="stylesheet" href="css/login.css">
 	</head>
 	<body>
 		<div class="login">
